--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/fastify/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
@@ -20,20 +21,23 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
-    "build-serve": "pnpm build && qwik build preview",
-    "serve": "vite preview --open",
+    "serve": "node server/entry.fastify",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/qwik": "^1.2.19",
     "@builder.io/qwik-city": "^1.2.19",
+    "@fastify/compress": "^6.2.1",
+    "@fastify/static": "^6.10.1",
     "@types/eslint": "^8.44.4",
     "@types/node": "^20.8.4",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
     "eslint-plugin-qwik": "^1.2.19",
+    "fastify": "^4.17.0",
+    "fastify-plugin": "^4.5.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
     "undici": "^5.26.0",
